--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/kodepintar/awesome-gh-cli-extensions">Here</a>.</noscript>
+  <noscript>This page requires JavaScript to work, plase enable it or just read it on <a href="https://github.com/kodepintar/awesome-gh-cli-extensions">Here</a>.</noscript>
   <div id="app">Loading...</div>
   <script>
     window.$docsify = {
