--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
   <title>Awesome Github Extensions</title>
 </head>
